--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,8 +7,8 @@ on:
       - reopened
       - synchronize
       - ready_for_review
-    paths:
-      - "app/**"
+    # paths:
+    #   - "app/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
