--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,12 +33,12 @@ jobs:
         env:
           CI: true
 
-      - name: Lint files
+      - name: Format files
         run: bun run format
         env:
           CI: true
 
-      - name: Lint files
-        run: bun run type-check
+      - name: Type check files
+        run: bun run typecheck
         env:
           CI: true
